objects/nFUSE__App_Plugin_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>nFUSE__App_Plugin__c</fullName>
        <description>Soft reference to the plugin</description>
        <label>Plugin Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Field_Set__c</fullName>
        <description>The field set API name.</description>
        <label>Field Set</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Is_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__SObject_Type_Context__c</fullName>
        <description>The Context of the associated SObjectType and Field Set</description>
        <label>SObject Type Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__SObject_Type__c</fullName>
        <description>The associated SObject type</description>
        <label>SObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>App Plugin Config</label>
    <pluralLabel>App Plugin Configs</pluralLabel>
</CustomObject>